[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/ExplosionClass.gd" type="Script" id=1]

[node name="ExplosionClass" type="Area2D"]
input_pickable = false
monitorable = false
collision_layer = 0
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Sprite" type="Sprite" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="SFXAudioStream" type="AudioStreamPlayer" parent="."]
bus = "SFX"

[connection signal="body_entered" from="." to="." method="_on_Explosion_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_finished"]
